Added old Helpers, made them a little more abstract for use on any code. Need to make RGB helper- be a fun project for someone looking for expience

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,20 @@ build/tmp/compileJava/previous-compilation-data.bin
 *.MF
 
 gradle/wrapper/
+
+.idea/misc.xml
+
+.idea/gradle.xml
+
+.idea/jarRepositories.xml
+
+.idea/vcs.xml
+
+build/
+
+*.log
+
+.idea/compiler.xml
+
+.idea/discord.xml
+
